--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@heroicons/react": "^1.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
